local repo move forward

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <div class="destination" id="paris">
                 <h2>Paris</h2>
             </div>
+			
+			<div class="destination" id="paris">
+                <h2>非要做一些修改，本地仓库上</h2>
+            </div>
         </div>
     </div>
 
